examples/test/testpolicy4896.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4896
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key12: value28
      key26: value41
      key13: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value19
          key41: value4
      podSelector:
        matchLabels:
          key29: value3
          key42: value35
          key39: value37
